Adição de comentários aos códigos de HTML, CSS e JavaScript

--- a/clock.html
+++ b/clock.html
@@ -9,9 +9,10 @@
 </head>
 
 <body>
-    <div class="relogio">
+    <div class="relogio"> <!-- Vai armazenar toda a configuração do relógio-->
         <div>
             <span id="horas"> 00 </span>
+            <!-- Span é uma tag utilizada para agrupar e estilizar partes específicas de um texto dentro de um elemento maior. Ele é um elemento de linha e não possui nenhum significado semântico específico, ou seja, é apenas uma caixa genérica para estilização e manipulação de texto.-->
             <span class="tempo"> Horas </span>
         </div>
 
@@ -26,7 +27,7 @@
 
     </div>
 
-    <script src="clock.js"></script>
+    <script src="clock.js"></script> <!-- Link do arquivo html com o arquivo Java -->
 </body>
 
 </html>
